navbar overlap resolve

--- a/src/index.css
+++ b/src/index.css
@@ -14,22 +14,22 @@ code {
 } */
 
 /* width */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 10px;
   height: 5px;
-}
+} */
 
 /* Track */
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   background: #000000;
-} 
+}  */
 
 /* Handle */
- ::-webkit-scrollbar-thumb {
+ /* ::-webkit-scrollbar-thumb {
   background:  rgb(66, 81, 52);
-} 
+}  */
 
 /* Handle on hover */
- ::-webkit-scrollbar-thumb:hover {
+ /* ::-webkit-scrollbar-thumb:hover {
   background:rgb(0, 255, 145) ;
-} 
+}  */
